--- a/index.html
+++ b/index.html
@@ -243,25 +243,25 @@
                                     <h5>Information Technology Officer</h5>
                                     <hr class="text-primary my-2">
                                     <p class="text-primary mb-1">2014 - 2023</p>
-                                    <h6 class="mb-0">Nepal</h6>
+                                    <h6 class="mb-0">Chautara Sangachokgadhi Municipality, Nepal</h6>
                                 </div>
                                 <div class="col-sm-6">
-                                    <h5>Product Designer</h5>
+                                    <h5>Store Team Member (Proactive Team Member)</h5>
                                     <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">2000 - 2045</p>
-                                    <h6 class="mb-0">Apex Software Inc</h6>
+                                    <p class="text-primary mb-1">September 4, 2023 - Till Now</p>
+                                    <h6 class="mb-0">Woolworths Group</h6>
                                 </div>
                                 <div class="col-sm-6">
-                                    <h5>Web Designer</h5>
+                                    <h5>ISPS Engineer</h5>
                                     <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">2000 - 2045</p>
-                                    <h6 class="mb-0">Apex Software Inc</h6>
+                                    <p class="text-primary mb-1">2014 - 2015</p>
+                                    <h6 class="mb-0">Sunforce Solar Company Pvt. Ltd.</h6>
                                 </div>
                                 <div class="col-sm-6">
-                                    <h5>Apps Designer</h5>
+                                    <h5>Full Time Member</h5>
                                     <hr class="text-primary my-2">
                                     <p class="text-primary mb-1">2000 - 2045</p>
-                                    <h6 class="mb-0">Apex Software Inc</h6>
+                                    <h6 class="mb-0">Anglicare Aged Care</h6>
                                 </div>
                             </div>
                         </div>
