--- a/index.html
+++ b/index.html
@@ -249,19 +249,19 @@
                                     <h5>Store Team Member (Proactive Team Member)</h5>
                                     <hr class="text-primary my-2">
                                     <p class="text-primary mb-1">September 4, 2023 - Till Now</p>
-                                    <h6 class="mb-0">Woolworths Group</h6>
+                                    <h6 class="mb-0">Woolworths Group, Mortdale, Sydney</h6>
                                 </div>
                                 <div class="col-sm-6">
                                     <h5>ISPS Engineer</h5>
                                     <hr class="text-primary my-2">
                                     <p class="text-primary mb-1">2014 - 2015</p>
-                                    <h6 class="mb-0">Sunforce Solar Company Pvt. Ltd.</h6>
+                                    <h6 class="mb-0">Sunforce Solar Company Pvt. Ltd., Nepal</h6>
                                 </div>
                                 <div class="col-sm-6">
                                     <h5>Full Time Member</h5>
                                     <hr class="text-primary my-2">
                                     <p class="text-primary mb-1">2000 - 2045</p>
-                                    <h6 class="mb-0">Anglicare Aged Care</h6>
+                                    <h6 class="mb-0">Anglicare Aged Care, Taren Point, Sydney</h6>
                                 </div>
                             </div>
                         </div>
