--- a/index.html
+++ b/index.html
@@ -319,9 +319,9 @@
                             <i class="fa fa-crop-alt fa-2x text-dark"></i>
                         </div>
                         <div class="ms-sm-4">
-                            <h4 class="mb-3">Creative Design</h4>
-                            <h6 class="mb-3">Start from <span class="text-primary">$199</span></h6>
-                            <span>Stet lorem dolor diam amet vero eos. No stet est diam amet diam ipsum. Clita dolor duo clita sit sed sit dolor eos.</span>
+                            <h4 class="mb-3">Bachelor's Degree</h4>
+                            <h6 class="mb-3"><span class="text-primary">2009-2013</span></h6>
+                            <span>Electronics and Communication Engineering</span> <span>Trivhuban University, Nepal</span>
                         </div>
                     </div>
                 </div>
@@ -331,9 +331,9 @@
                             <i class="fa fa-code-branch fa-2x text-dark"></i>
                         </div>
                         <div class="ms-sm-4">
-                            <h4 class="mb-3">Graphic Design</h4>
-                            <h6 class="mb-3">Start from <span class="text-primary">$199</span></h6>
-                            <span>Stet lorem dolor diam amet vero eos. No stet est diam amet diam ipsum. Clita dolor duo clita sit sed sit dolor eos.</span>
+                            <h4 class="mb-3">High School</h4>
+                            <h6 class="mb-3"><span class="text-primary">2007-2009</span></h6>
+                            <span>Xavier International Higher Secondary School, Nepal</span>
                         </div>
                     </div>
                 </div>
@@ -343,9 +343,9 @@
                             <i class="fa fa-code fa-2x text-dark"></i>
                         </div>
                         <div class="ms-sm-4">
-                            <h4 class="mb-3">Web Design</h4>
-                            <h6 class="mb-3">Start from <span class="text-primary">$199</span></h6>
-                            <span>Stet lorem dolor diam amet vero eos. No stet est diam amet diam ipsum. Clita dolor duo clita sit sed sit dolor eos.</span>
+                            <h4 class="mb-3">School Level</h4>
+                            <h6 class="mb-3"><span class="text-primary">Passout 2007</span></h6>
+                            <span>Ekta Boarding School, Nepal</span>
                         </div>
                     </div>
                 </div>
