--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                         <div class="ms-sm-4">
                             <h4 class="mb-3">Bachelor's Degree</h4>
                             <h6 class="mb-3"><span class="text-primary">2009-2013</span></h6>
-                            <span>Electronics and Communication Engineering</span> <span>Trivhuban University, Nepal</span>
+                            <span>Electronics and Communication Engineering</span><br> <span>Trivhuban University, Nepal</span>
                         </div>
                     </div>
                 </div>
@@ -332,7 +332,7 @@
                         </div>
                         <div class="ms-sm-4">
                             <h4 class="mb-3">High School</h4>
-                            <h6 class="mb-3"><span class="text-primary">2007-2009</span></h6>
+                            <h6 class="mb-3"><span class="text-primary">2007-2009</span></h6><span>Plus 2, Science</span><br>
                             <span>Xavier International Higher Secondary School, Nepal</span>
                         </div>
                     </div>
@@ -346,18 +346,6 @@
                             <h4 class="mb-3">School Level</h4>
                             <h6 class="mb-3"><span class="text-primary">Passout 2007</span></h6>
                             <span>Ekta Boarding School, Nepal</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <div class="service-item d-flex flex-column flex-sm-row bg-white rounded h-100 p-4 p-lg-5">
-                        <div class="bg-icon flex-shrink-0 mb-3">
-                            <i class="fa fa-laptop-code fa-2x text-dark"></i>
-                        </div>
-                        <div class="ms-sm-4">
-                            <h4 class="mb-3">UI/UX Design</h4>
-                            <h6 class="mb-3">Start from <span class="text-primary">$199</span></h6>
-                            <span>Stet lorem dolor diam amet vero eos. No stet est diam amet diam ipsum. Clita dolor duo clita sit sed sit dolor eos.</span>
                         </div>
                     </div>
                 </div>
