--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                         </div>
                         <div class="ms-sm-4">
                             <h4 class="mb-3">Master's Degree</h4>
-                            <h6 class="mb-3"><span class="text-primary">2009-2013</span></h6>
+                            <h6 class="mb-3"><span class="text-primary">20..-20</span></h6>
                             <span>.....</span><br> <span>......</span>
                         </div>
                     </div>
