--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                     <h1 class="display-5 mb-0">My Education</h1>
                 </div>
                 <div class="col-lg-6 text-lg-end">
-                    <a class="btn btn-primary py-3 px-5" href="https://github.com/erghimire/mywebsite/blob/main/Details%20Resume_Roshan%20Ghimire.pdf">Hire Me</a>
+                    <a class="btn btn-primary py-3 px-5" href="https://drive.usercontent.google.com/u/0/uc?id=1v0x0nuyKRr5axUE_-S1nTXoeKxcU393x&export=download">Hire Me</a>
                 </div>
             </div>
             <div class="row g-4">
