--- a/index.html
+++ b/index.html
@@ -521,13 +521,13 @@
             <div class="row g-5">
                 <div class="col-lg-5 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <p class="mb-2">My Home:</p>
-                    <h3 class="fw-bold">50 Martin Place, Mortdale, NSW, Sydney</h3>
+                    <h5 class="fw-bold">50 Martin Place, Mortdale, NSW, Sydney</h5>
                     <hr class="w-100">
                     <p class="mb-2">Call me:</p>
-                    <h3 class="fw-bold">+61 045 2024 208</h3>
+                    <h5 class="fw-bold">+61 045 2024 208</h5>
                     <hr class="w-100">
                     <p class="mb-2">Mail me:</p>
-                    <h3 class="fw-bold">iamroshanghimire@gmail.com</h3>
+                    <h5 class="fw-bold">iamroshanghimire@gmail.com</h5>
                     <hr class="w-100">
                     <p class="mb-2">Follow me:</p>
                     <div class="d-flex pt-2">
@@ -577,6 +577,9 @@
 
 
     <!-- Map Start -->
+        <div class="col-lg-6 text-lg-end">
+                    <a class="btn btn-primary py-3 px-5" href="">My Location</a>
+                </div>
     <div class="container-xxl pt-5 px-0 wow fadeInUp" data-wow-delay="0.1s">
         <div class="container-xxl pt-5 px-0">
             <div class="bg-dark">
