--- a/index.html
+++ b/index.html
@@ -577,9 +577,9 @@
 
 
     <!-- Map Start -->
-        <div class="col-lg-6 text-lg-end">
-                    <a class="btn btn-primary py-3 px-5" href="">My Location</a>
-                </div>
+    <div class="col-lg-6"> 
+        <h3 class="display-5 mb-0">My Location</h3>
+    </div>
     <div class="container-xxl pt-5 px-0 wow fadeInUp" data-wow-delay="0.1s">
         <div class="container-xxl pt-5 px-0">
             <div class="bg-dark">
