--- a/index.html
+++ b/index.html
@@ -260,25 +260,25 @@
                                 <div class="col-sm-6">
                                     <h5>Information Technology Officer</h5>
                                     <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">2014 - 2023</p>
+                                    <p class="text-primary mb-1">Dec 2014 – July 2023</p>
                                     <h6 class="mb-0">Chautara Sangachokgadhi Municipality, Nepal</h6>
                                 </div>
                                 <div class="col-sm-6">
                                     <h5>Store Team Member (Proactive Team Member)</h5>
                                     <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">September 4, 2023 - Till Now</p>
+                                    <p class="text-primary mb-1">Sep 2023 – Till Now</p>
                                     <h6 class="mb-0">Woolworths Group, Mortdale, Sydney</h6>
                                 </div>
                                 <div class="col-sm-6">
                                     <h5>ISPS Engineer</h5>
                                     <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">2014 - 2015</p>
+                                    <p class="text-primary mb-1">May 2014 - Nov 2014</p>
                                     <h6 class="mb-0">Sunforce Solar Company Pvt. Ltd., Nepal</h6>
                                 </div>
                                 <div class="col-sm-6">
                                     <h5>Full Time Member</h5>
                                     <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">2000 - 2045</p>
+                                    <p class="text-primary mb-1">Feb 2024 - May 2024</p>
                                     <h6 class="mb-0">Anglicare Aged Care, Taren Point, Sydney</h6>
                                 </div>
                             </div>
