--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <h3 class="mb-5">Skills, Experience & Personal Attribute</h3>
+                    <h3 class="mb-5">Skills, Experience & Personal Attributes</h3>
                     <p class="mb-4">To seek the challenging position where I can utilize my quantitative, analytical and learning capabilities to the optimum for the synergic development of the organization.</p>
                     <h4 class="mb-5">My Skills</h4>
                     <div class="row align-items-center">
