--- a/index.html
+++ b/index.html
@@ -471,13 +471,13 @@
             </div>
             <div class="row g-5">
                 <div class="col-lg-5 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <p class="mb-2">My Home:</p>
+                    <p class="mb-2"><i class="fab fa-home">My Home:</p>
                     <h5 class="fw-bold">50 Martin Place, Mortdale, NSW, Sydney</h5>
                     <hr class="w-100">
-                    <p class="mb-2">Call me:</p>
+                    <p class="mb-2">Call Me:</p>
                     <h5 class="fw-bold">+61 045 2024 208</h5>
                     <hr class="w-100">
-                    <p class="mb-2">Mail me:</p>
+                    <p class="mb-2">Mail Me:</p>
                     <h5 class="fw-bold">iamroshanghimire@gmail.com</h5>
                     <hr class="w-100">
                     <p class="mb-2">Follow me:</p>
