--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
             </div>
             <div class="row g-5">
                 <div class="col-lg-5 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <p class="mb-2"><i class="fab fa-home"><My Home:</p>
+                    <p class="mb-2"><My Home:</p>
                     <h5 class="fw-bold">50 Martin Place, Mortdale, NSW, Sydney</h5>
                     <hr class="w-100">
                     <p class="mb-2">Call Me:</p>
