--- a/index.html
+++ b/index.html
@@ -480,11 +480,12 @@
                     <p class="mb-2">Mail Me:</p>
                     <h5 class="fw-bold">iamroshanghimire@gmail.com</h5>
                     <hr class="w-100">
-                    <p class="mb-2">Follow me:</p>
+                    <p class="mb-2">Follow Me:</p>
                     <div class="d-flex pt-2">
-                        <a class="btn btn-square btn-primary me-2" href="https://www.facebook.com/erroshanghimire"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square btn-primary me-2" href="https://www.youtube.com/channel/UC2s0phzTsXDMf4RfCsMtb4A"><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-square btn-primary me-2" href="https://www.linkedin.com/in/erroshanghimire/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-square btn-primary me-2" href="https://www.facebook.com/erroshanghimire" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-square btn-primary me-2" href="https://www.youtube.com/channel/UC2s0phzTsXDMf4RfCsMtb4A" target="_blank"><i class="fab fa-youtube"></i></a>
+                        <a class="btn btn-square btn-primary me-2" href="https://www.linkedin.com/in/erroshanghimire/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-square btn-primary me-2" href="https://www.tiktok.com/@iamroshanghimire/" target="_blank"><i class="fab fa-Tiktok"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-7 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
