--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
                         <a class="btn btn-square btn-primary me-2" href="https://www.facebook.com/erroshanghimire" target="_blank"><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-square btn-primary me-2" href="https://www.youtube.com/channel/UC2s0phzTsXDMf4RfCsMtb4A" target="_blank"><i class="fab fa-youtube"></i></a>
                         <a class="btn btn-square btn-primary me-2" href="https://www.linkedin.com/in/erroshanghimire/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="btn btn-square btn-primary me-2" href="https://www.tiktok.com/@iamroshanghimire/" target="_blank"><i class="fab fa-Tiktok"></i></a>
+                        <a class="btn btn-square btn-primary me-2" href="https://www.tiktok.com/@iamroshanghimire/" target="_blank"><i class="bi bi-tiktok"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-7 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
