--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
                     <h1 class="display-5 mb-0">My Location</h1>
                 </div>
                 <div class="col-lg-6 text-lg-end">
-                    <a class="btn btn-primary py-3 px-5" href="">Say Hello</a>
+                    <a class="btn btn-primary py-3 px-5" href="https://www.facebook.com/erroshanghimire/" target="_blank">Say Hello</a>
                 </div>
             </div>
             <div class="row g-5">
@@ -485,7 +485,6 @@
                         <a class="btn btn-square btn-primary me-2" href="https://www.facebook.com/erroshanghimire" target="_blank"><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-square btn-primary me-2" href="https://www.youtube.com/channel/UC2s0phzTsXDMf4RfCsMtb4A" target="_blank"><i class="fab fa-youtube"></i></a>
                         <a class="btn btn-square btn-primary me-2" href="https://www.linkedin.com/in/erroshanghimire/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="btn btn-square btn-primary me-2" href="https://www.tiktok.com/@iamroshanghimire/" target="_blank"><i class="fab fa-tiktok"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-7 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
