--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <a href="#home" class="nav-item nav-link active">Home</a>
                 <a href="#about" class="nav-item nav-link">About Me</a>
                 <a href="#skill" class="nav-item nav-link">My Skills</a>
-                <a href="#education" class="nav-item nav-link">Education</a>
+                <a href="#services" class="nav-item nav-link">Education</a>
             </div>
             <a href="index.html" class="navbar-brand bg-secondary py-3 px-4 mx-3 d-none d-lg-block">
                 <h1 class="text-primary fw-bold m-0">Roshan Ghimire</h1>
@@ -318,8 +318,8 @@
     <!-- Expertise End -->
 
 
-    <!-- Education Start -->
-    <div class="container-fluid bg-light my-5 py-6" id="education">
+    <!-- Services Start -->
+    <div class="container-fluid bg-light my-5 py-6" id="services">
         <div class="container">
             <div class="row g-5 mb-5 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="col-lg-6">
@@ -331,7 +331,7 @@
             </div>
             <div class="row g-4">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="education-item d-flex flex-column flex-sm-row bg-white rounded h-100 p-4 p-lg-5">
+                    <div class="services-item d-flex flex-column flex-sm-row bg-white rounded h-100 p-4 p-lg-5">
                         <div class="bg-icon flex-shrink-0 mb-3">
                             <i class="fa fa-crop-alt fa-2x text-dark"></i>
                         </div>
@@ -343,7 +343,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="education-item d-flex flex-column flex-sm-row bg-white rounded h-100 p-4 p-lg-5">
+                    <div class="services-item d-flex flex-column flex-sm-row bg-white rounded h-100 p-4 p-lg-5">
                         <div class="bg-icon flex-shrink-0 mb-3">
                             <i class="fa fa-crop-alt fa-2x text-dark"></i>
                         </div>
@@ -355,7 +355,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <div class="education-item d-flex flex-column flex-sm-row bg-white rounded h-100 p-4 p-lg-5">
+                    <div class="services-item d-flex flex-column flex-sm-row bg-white rounded h-100 p-4 p-lg-5">
                         <div class="bg-icon flex-shrink-0 mb-3">
                             <i class="fa fa-code-branch fa-2x text-dark"></i>
                         </div>
@@ -367,7 +367,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="education-item d-flex flex-column flex-sm-row bg-white rounded h-100 p-4 p-lg-5">
+                    <div class="services-item d-flex flex-column flex-sm-row bg-white rounded h-100 p-4 p-lg-5">
                         <div class="bg-icon flex-shrink-0 mb-3">
                             <i class="fa fa-code fa-2x text-dark"></i>
                         </div>
